test/asm/lex-label.err
error: syntax error, unexpected label, expecting symbol
    at lex-label.asm(1)
error: syntax error, unexpected label, expecting ? or symbol
    at lex-label.asm(3)
error: syntax error, unexpected ENDM
    at lex-label.asm(4)
error: syntax error, unexpected label, expecting ? or symbol
    at lex-label.asm(6)
error: syntax error, unexpected ENDR
    at lex-label.asm(7)
error: syntax error, unexpected label, expecting symbol
    at lex-label.asm(9)
Assembly aborted with 6 errors!
