test/asm/lex-label.asm
def var: equ 42

macro mac:
endm

for idx:, 10
endr

newcharmap french:
